syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/averageNetAdmin/andproxy/andproto/models;models";

message ServerStats {
  int64 id = 1;
  int64 fails = 2;
  int64 connections = 3;
  bool down = 4;
}

message ServerConnStats {
  string id = 1;
  int64 handler_id = 2;
  int64 filter_id = 3;
  int64 pool_id = 4;
  int64 server_id = 5;
  
  int64 bits_recieved = 6;
  int64 bits_sent = 7;
  int64 handled_requests = 8;
  int64 connections = 9;
}

message HandlerStats {
  int64 id = 1;
  int64 connections = 2;
  int64 bits_recieved = 3;
  int64 bits_sent = 4;
  int64 handled_requests = 5;
  int64 rejected = 6;
}